[package]
name = "excalidocker"
version = "0.1.6"
edition = "2021"
authors = ["Evgeny Tolbakov"]
description = "Utility to convert your docker-compose into excalidraw"
repository = "https://github.com/etolbakov/excalidocker-rs"
license = "MIT"
readme = "./README.md"
keywords = ["docker", "docker-compose", "excalidraw"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9.21"
clap = {version = "4.3.8", features = ["derive"]}
thiserror = "1.0.40"
rand = "0.8.5"
isahc = "1.7"

# https://github.com/sfackler/rust-openssl/issues/1021
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
debug = false